Add word boundaries to the PDF accessibility tree.

Bug: 812304
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: Ib729933d425af0630201e11092e406089b7084ff
Reviewed-on: https://chromium-review.googlesource.com/919543
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: dsinclair <dsinclair@chromium.org>
Reviewed-by: Katie Dektar <katie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536903}
Former-commit-id: e06dfd70d399414430ff083da41ecb73e28bb3c7